Set the name property for all deployment resources
There are two reasons the name property should always be set for deployment
resources:
- The name often shows up in logs, files and API calls, the default
  derived name is long and unhelpful
- Sorting by name determines the merge order of os-apply-config, and the
  execution order of puppet/shell scripts (note this is different to
  resource dependency order) so leaving the default name results in an
  undetermined order which could lead to unpredictable deployment of
  configs

This change simply sets the name to the resource name, but a future change
should prepend each name with a run-parts style 2 digit prefix so that the
order is explicitly stated. Documentation for extraconfig needs to clearly
state what prefix is needed to override which merge/execution order.

For existing overcloud stacks, heat currently replaces deployment resources
when the name changes, so this change
Depends-On: I95037191915ccd32b2efb72203b146897a4edbc9

Change-Id: Ic4bcd56aa65b981275c3d4214588bfc4de63b3b0

--- a/docker/compute-post.yaml
+++ b/docker/compute-post.yaml
@@ -49,6 +49,7 @@ resources:
   ComputePuppetDeployment:
     type: OS::Heat::SoftwareDeployments
     properties:
+      name: ComputePuppetDeployment
       servers:  {get_param: servers}
       config: {get_resource: ComputePuppetConfig}
       input_values:
@@ -67,6 +68,7 @@ resources:
     type: OS::Heat::SoftwareDeployments
     depends_on: ComputePuppetDeployment
     properties:
+      name: CopyEtcDeployment
       config: {get_resource: CopyEtcConfig}
       servers:  {get_param: servers}
 
@@ -82,6 +84,7 @@ resources:
     type: OS::Heat::SoftwareDeployments
     depends_on: CopyEtcDeployment
     properties:
+      name: CopyJsonDeployment
       config: {get_resource: CopyJsonConfig}
       servers:  {get_param: servers}
 
@@ -89,6 +92,7 @@ resources:
     type: OS::Heat::StructuredDeployments
     depends_on: CopyJsonDeployment
     properties:
+      name: NovaComputeContainersDeploymentOVS
       config: {get_resource: NovaComputeContainersConfigOVS}
       servers: {get_param: servers}
 
@@ -131,6 +135,7 @@ resources:
     type: OS::Heat::SoftwareDeployments
     depends_on: NovaComputeContainersDeploymentOVS
     properties:
+      name: NovaComputeContainersDeploymentNetconfig
       config: {get_resource: NovaComputeContainersConfigNetconfig}
       servers: {get_param: servers}
 
@@ -151,6 +156,7 @@ resources:
     type: OS::Heat::StructuredDeployments
     depends_on: [CopyJsonDeployment, CopyEtcDeployment, ComputePuppetDeployment, NovaComputeContainersDeploymentNetconfig]
     properties:
+      name: LibvirtContainersDeployment
       config: {get_resource: LibvirtContainersConfig}
       servers: {get_param: servers}
 
@@ -194,6 +200,7 @@ resources:
     type: OS::Heat::StructuredDeployments
     depends_on: [CopyJsonDeployment, CopyEtcDeployment, ComputePuppetDeployment, NovaComputeContainersDeploymentNetconfig, LibvirtContainersDeployment]
     properties:
+      name: NovaComputeContainersDeployment
       config: {get_resource: NovaComputeContainersConfig}
       servers: {get_param: servers}
 
