--- a/puppet/ceph-storage-post.yaml
+++ b/puppet/ceph-storage-post.yaml
@@ -30,6 +30,7 @@ resources:
   CephStorageDeployment_Step1:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: CephStorageDeployment_Step1
       servers:  {get_param: servers}
       config: {get_resource: CephStoragePuppetConfig}
       input_values:
