--- a/puppet/ceph-storage.yaml
+++ b/puppet/ceph-storage.yaml
@@ -142,6 +142,7 @@ resources:
   NetworkDeployment:
     type: OS::TripleO::SoftwareDeployment
     properties:
+      name: NetworkDeployment
       config: {get_resource: NetworkConfig}
       server: {get_resource: CephStorage}
       actions: {get_param: NetworkDeploymentActions}
@@ -150,6 +151,7 @@ resources:
     type: OS::Heat::StructuredDeployment
     depends_on: NetworkDeployment
     properties:
+      name: CephStorageDeployment
       config: {get_resource: CephStorageConfig}
       server: {get_resource: CephStorage}
       input_values:
