--- a/puppet/compute-post.yaml
+++ b/puppet/compute-post.yaml
@@ -31,6 +31,7 @@ resources:
   ComputePuppetDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: ComputePuppetDeployment
       servers:  {get_param: servers}
       config: {get_resource: ComputePuppetConfig}
       input_values:
