--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -376,6 +376,7 @@ resources:
   NetworkDeployment:
     type: OS::TripleO::SoftwareDeployment
     properties:
+      name: NetworkDeployment
       config: {get_resource: NetworkConfig}
       server: {get_resource: NovaCompute}
       actions: {get_param: NetworkDeploymentActions}
@@ -483,6 +484,7 @@ resources:
     type: OS::TripleO::SoftwareDeployment
     depends_on: NetworkDeployment
     properties:
+      name: NovaComputeDeployment
       config: {get_resource: NovaComputeConfig}
       server: {get_resource: NovaCompute}
       input_values:
@@ -603,6 +605,7 @@ resources:
   UpdateDeployment:
     type: OS::Heat::SoftwareDeployment
     properties:
+      name: UpdateDeployment
       config: {get_resource: UpdateConfig}
       server: {get_resource: NovaCompute}
       input_values:
