--- a/puppet/extraconfig/all_nodes/neutron-ml2-cisco-nexus-ucsm.yaml
+++ b/puppet/extraconfig/all_nodes/neutron-ml2-cisco-nexus-ucsm.yaml
@@ -131,6 +131,7 @@ resources:
   NetworkCiscoDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: NetworkCiscoDeployment
       config: {get_resource: NetworkCiscoConfig}
       servers:  {get_param: controller_servers}
       input_values:
@@ -178,6 +179,7 @@ resources:
   CollectMacDeploymentsController:
     type: OS::Heat::SoftwareDeployments
     properties:
+      name: CollectMacDeploymentsController
       servers:  {get_param: controller_servers}
       config: {get_resource: CollectMacConfig}
       actions: ['CREATE'] # Only do this on CREATE
@@ -185,6 +187,7 @@ resources:
   CollectMacDeploymentsCompute:
     type: OS::Heat::SoftwareDeployments
     properties:
+      name: CollectMacDeploymentsCompute
       servers:  {get_param: compute_servers}
       config: {get_resource: CollectMacConfig}
       actions: ['CREATE'] # Only do this on CREATE
@@ -192,6 +195,7 @@ resources:
   CollectMacDeploymentsBlockStorage:
     type: OS::Heat::SoftwareDeployments
     properties:
+      name: CollectMacDeploymentsBlockStorage
       servers:  {get_param: blockstorage_servers}
       config: {get_resource: CollectMacConfig}
       actions: ['CREATE'] # Only do this on CREATE
@@ -199,6 +203,7 @@ resources:
   CollectMacDeploymentsObjectStorage:
     type: OS::Heat::SoftwareDeployments
     properties:
+      name: CollectMacDeploymentsObjectStorage
       servers:  {get_param: objectstorage_servers}
       config: {get_resource: CollectMacConfig}
       actions: ['CREATE'] # Only do this on CREATE
@@ -206,6 +211,7 @@ resources:
   CollectMacDeploymentsCephStorage:
     type: OS::Heat::SoftwareDeployments
     properties:
+      name: CollectMacDeploymentsCephStorage
       servers:  {get_param: cephstorage_servers}
       config: {get_resource: CollectMacConfig}
       actions: ['CREATE'] # Only do this on CREATE
@@ -280,6 +286,7 @@ resources:
   MappingToNexusDeploymentsController:
     type: OS::Heat::SoftwareDeployment
     properties:
+      name: MappingToNexusDeploymentsController
       server:  {get_param: [controller_servers, '0']}
       config: {get_resource: MappingToNexusConfig}
       input_values:
@@ -323,6 +330,7 @@ resources:
     type: OS::Heat::SoftwareDeployment
     depends_on: MappingToNexusDeploymentsController
     properties:
+      name: MappingToUCSMDeploymentsController
       server:  {get_param: [controller_servers, '0']}
       config: {get_resource: MappingToUCSMConfig}
       input_values:
