--- a/puppet/extraconfig/pre_deploy/compute/nova-nuage.yaml
+++ b/puppet/extraconfig/pre_deploy/compute/nova-nuage.yaml
@@ -70,6 +70,7 @@ resources:
   NovaNuageDeployment:
     type: OS::Heat::StructuredDeployment
     properties:
+      name: NovaNuageDeployment
       config: {get_resource: NovaNuageConfig}
       server: {get_param: server}
       input_values:
