--- a/puppet/extraconfig/pre_deploy/controller/neutron-ml2-bigswitch.yaml
+++ b/puppet/extraconfig/pre_deploy/controller/neutron-ml2-bigswitch.yaml
@@ -56,6 +56,7 @@ resources:
   NeutronBigswitchDeployment:
     type: OS::Heat::StructuredDeployment
     properties:
+      name: NeutronBigswitchDeployment
       config: {get_resource: NeutronBigswitchConfig}
       server: {get_param: server}
       input_values:
