--- a/puppet/swift-storage.yaml
+++ b/puppet/swift-storage.yaml
@@ -165,6 +165,7 @@ resources:
   NetworkDeployment:
     type: OS::TripleO::SoftwareDeployment
     properties:
+      name: NetworkDeployment
       config: {get_resource: NetworkConfig}
       server: {get_resource: SwiftStorage}
       actions: {get_param: NetworkDeploymentActions}
@@ -216,6 +217,7 @@ resources:
     type: OS::Heat::StructuredDeployment
     depends_on: NetworkDeployment
     properties:
+      name: SwiftStorageHieraDeploy
       server: {get_resource: SwiftStorage}
       config: {get_resource: SwiftStorageHieraConfig}
       input_values:
