--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -1229,6 +1229,7 @@ resources:
   VipDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: VipDeployment
       config: {get_resource: VipConfig}
       servers: {get_attr: [Controller, attributes, nova_server_resource]}
       input_values:
@@ -1264,18 +1265,21 @@ resources:
   ControllerBootstrapNodeDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: ControllerBootstrapNodeDeployment
       config: {get_attr: [ControllerBootstrapNodeConfig, config_id]}
       servers: {get_attr: [Controller, attributes, nova_server_resource]}
 
   ControllerSwiftDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: ControllerSwiftDeployment
       config: {get_attr: [SwiftDevicesAndProxyConfig, config_id]}
       servers: {get_attr: [Controller, attributes, nova_server_resource]}
 
   ObjectStorageSwiftDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: ObjectStorageSwiftDeployment
       config: {get_attr: [SwiftDevicesAndProxyConfig, config_id]}
       servers: {get_attr: [ObjectStorage, attributes, nova_server_resource]}
 
@@ -1289,18 +1293,21 @@ resources:
   ComputeCephDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: ComputeCephDeployment
       config: {get_attr: [CephClusterConfig, config_id]}
       servers: {get_attr: [Compute, attributes, nova_server_resource]}
 
   ControllerCephDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: ControllerCephDeployment
       config: {get_attr: [CephClusterConfig, config_id]}
       servers: {get_attr: [Controller, attributes, nova_server_resource]}
 
   CephStorageCephDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: CephStorageCephDeployment
       config: {get_attr: [CephClusterConfig, config_id]}
       servers: {get_attr: [CephStorage, attributes, nova_server_resource]}
 
@@ -1335,36 +1342,42 @@ resources:
   ControllerClusterDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: ControllerClusterDeployment
       config: {get_resource: ControllerClusterConfig}
       servers: {get_attr: [Controller, attributes, nova_server_resource]}
 
   ControllerAllNodesDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: ControllerAllNodesDeployment
       config: {get_attr: [allNodesConfig, config_id]}
       servers: {get_attr: [Controller, attributes, nova_server_resource]}
 
   ComputeAllNodesDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: ComputeAllNodesDeployment
       config: {get_attr: [allNodesConfig, config_id]}
       servers: {get_attr: [Compute, attributes, nova_server_resource]}
 
   BlockStorageAllNodesDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: BlockStorageAllNodesDeployment
       config: {get_attr: [allNodesConfig, config_id]}
       servers: {get_attr: [BlockStorage, attributes, nova_server_resource]}
 
   ObjectStorageAllNodesDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: ObjectStorageAllNodesDeployment
       config: {get_attr: [allNodesConfig, config_id]}
       servers: {get_attr: [ObjectStorage, attributes, nova_server_resource]}
 
   CephStorageAllNodesDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: CephStorageAllNodesDeployment
       config: {get_attr: [allNodesConfig, config_id]}
       servers: {get_attr: [CephStorage, attributes, nova_server_resource]}
 
@@ -1385,6 +1398,7 @@ resources:
     type: OS::Heat::StructuredDeployments
     depends_on: ControllerAllNodesDeployment
     properties:
+      name: ControllerAllNodesValidationDeployment
       config: {get_resource: AllNodesValidationConfig}
       servers: {get_attr: [Controller, attributes, nova_server_resource]}
 
@@ -1392,6 +1406,7 @@ resources:
     type: OS::Heat::StructuredDeployments
     depends_on: ComputeAllNodesDeployment
     properties:
+      name: ComputeAllNodesValidationDeployment
       config: {get_resource: AllNodesValidationConfig}
       servers: {get_attr: [Compute, attributes, nova_server_resource]}
 
@@ -1399,6 +1414,7 @@ resources:
     type: OS::Heat::StructuredDeployments
     depends_on: BlockStorageAllNodesDeployment
     properties:
+      name: BlockStorageAllNodesValidationDeployment
       config: {get_resource: AllNodesValidationConfig}
       servers: {get_attr: [BlockStorage, attributes, nova_server_resource]}
 
@@ -1406,6 +1422,7 @@ resources:
     type: OS::Heat::StructuredDeployments
     depends_on: ObjectStorageAllNodesDeployment
     properties:
+      name: ObjectStorageAllNodesValidationDeployment
       config: {get_resource: AllNodesValidationConfig}
       servers: {get_attr: [ObjectStorage, attributes, nova_server_resource]}
 
@@ -1413,6 +1430,7 @@ resources:
     type: OS::Heat::StructuredDeployments
     depends_on: CephStorageAllNodesDeployment
     properties:
+      name: CephStorageAllNodesValidationDeployment
       config: {get_resource: AllNodesValidationConfig}
       servers: {get_attr: [CephStorage, attributes, nova_server_resource]}
 
