--- a/puppet/controller-post.yaml
+++ b/puppet/controller-post.yaml
@@ -35,6 +35,7 @@ resources:
     type: OS::Heat::StructuredDeployments
     depends_on: ControllerPrePuppet
     properties:
+      name: ControllerLoadBalancerDeployment_Step1
       servers:  {get_param: servers}
       config: {get_resource: ControllerPuppetConfig}
       input_values:
@@ -46,6 +47,7 @@ resources:
     type: OS::Heat::StructuredDeployments
     depends_on: ControllerLoadBalancerDeployment_Step1
     properties:
+      name: ControllerServicesBaseDeployment_Step2
       servers:  {get_param: servers}
       config: {get_resource: ControllerPuppetConfig}
       input_values:
@@ -71,6 +73,7 @@ resources:
     type: OS::Heat::StructuredDeployments
     depends_on: ControllerServicesBaseDeployment_Step2
     properties:
+      name: ControllerRingbuilderDeployment_Step3
       servers:  {get_param: servers}
       config: {get_resource: ControllerRingbuilderPuppetConfig}
       input_values:
@@ -80,6 +83,7 @@ resources:
     type: OS::Heat::StructuredDeployments
     depends_on: ControllerRingbuilderDeployment_Step3
     properties:
+      name: ControllerOvercloudServicesDeployment_Step4
       servers:  {get_param: servers}
       config: {get_resource: ControllerPuppetConfig}
       input_values:
@@ -90,6 +94,7 @@ resources:
     type: OS::Heat::StructuredDeployments
     depends_on: ControllerOvercloudServicesDeployment_Step4
     properties:
+      name: ControllerOvercloudServicesDeployment_Step5
       servers:  {get_param: servers}
       config: {get_resource: ControllerPuppetConfig}
       input_values:
@@ -100,6 +105,7 @@ resources:
     type: OS::Heat::StructuredDeployments
     depends_on: ControllerOvercloudServicesDeployment_Step5
     properties:
+      name: ControllerOvercloudServicesDeployment_Step6
       servers:  {get_param: servers}
       config: {get_resource: ControllerPuppetConfig}
       input_values:
