--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -803,6 +803,7 @@ resources:
   NetworkDeployment:
     type: OS::TripleO::SoftwareDeployment
     properties:
+      name: NetworkDeployment
       config: {get_resource: NetworkConfig}
       server: {get_resource: Controller}
       input_values:
@@ -828,6 +829,7 @@ resources:
     type: OS::TripleO::SoftwareDeployment
     depends_on: NetworkDeployment
     properties:
+      name: ControllerDeployment
       config: {get_resource: ControllerConfig}
       server: {get_resource: Controller}
       input_values:
@@ -1461,6 +1463,7 @@ resources:
   UpdateDeployment:
     type: OS::Heat::SoftwareDeployment
     properties:
+      name: UpdateDeployment
       config: {get_resource: UpdateConfig}
       server: {get_resource: Controller}
       input_values:
