--- a/puppet/extraconfig/pre_deploy/controller/neutron-nuage.yaml
+++ b/puppet/extraconfig/pre_deploy/controller/neutron-nuage.yaml
@@ -65,6 +65,7 @@ resources:
   NeutronNuageDeployment:
     type: OS::Heat::StructuredDeployment
     properties:
+      name: NeutronNuageDeployment
       config: {get_resource: NeutronNuageConfig}
       server: {get_param: server}
       input_values:
