--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -1240,6 +1240,7 @@ resources:
   VipDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: VipDeployment
       config: {get_resource: VipConfig}
       servers: {get_attr: [Controller, attributes, nova_server_resource]}
       input_values:
@@ -1275,18 +1276,21 @@ resources:
   ControllerBootstrapNodeDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: ControllerBootstrapNodeDeployment
       config: {get_attr: [ControllerBootstrapNodeConfig, config_id]}
       servers: {get_attr: [Controller, attributes, nova_server_resource]}
 
   ControllerSwiftDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: ControllerSwiftDeployment
       config: {get_attr: [SwiftDevicesAndProxyConfig, config_id]}
       servers: {get_attr: [Controller, attributes, nova_server_resource]}
 
   ObjectStorageSwiftDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: ObjectStorageSwiftDeployment
       config: {get_attr: [SwiftDevicesAndProxyConfig, config_id]}
       servers: {get_attr: [ObjectStorage, attributes, nova_server_resource]}
 
@@ -1300,18 +1304,21 @@ resources:
   ComputeCephDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: ComputeCephDeployment
       config: {get_attr: [CephClusterConfig, config_id]}
       servers: {get_attr: [Compute, attributes, nova_server_resource]}
 
   ControllerCephDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: ControllerCephDeployment
       config: {get_attr: [CephClusterConfig, config_id]}
       servers: {get_attr: [Controller, attributes, nova_server_resource]}
 
   CephStorageCephDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: CephStorageCephDeployment
       config: {get_attr: [CephClusterConfig, config_id]}
       servers: {get_attr: [CephStorage, attributes, nova_server_resource]}
 
@@ -1346,36 +1353,42 @@ resources:
   ControllerClusterDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: ControllerClusterDeployment
       config: {get_resource: ControllerClusterConfig}
       servers: {get_attr: [Controller, attributes, nova_server_resource]}
 
   ControllerAllNodesDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: ControllerAllNodesDeployment
       config: {get_attr: [allNodesConfig, config_id]}
       servers: {get_attr: [Controller, attributes, nova_server_resource]}
 
   ComputeAllNodesDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: ComputeAllNodesDeployment
       config: {get_attr: [allNodesConfig, config_id]}
       servers: {get_attr: [Compute, attributes, nova_server_resource]}
 
   BlockStorageAllNodesDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: BlockStorageAllNodesDeployment
       config: {get_attr: [allNodesConfig, config_id]}
       servers: {get_attr: [BlockStorage, attributes, nova_server_resource]}
 
   ObjectStorageAllNodesDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: ObjectStorageAllNodesDeployment
       config: {get_attr: [allNodesConfig, config_id]}
       servers: {get_attr: [ObjectStorage, attributes, nova_server_resource]}
 
   CephStorageAllNodesDeployment:
     type: OS::Heat::StructuredDeployments
     properties:
+      name: CephStorageAllNodesDeployment
       config: {get_attr: [allNodesConfig, config_id]}
       servers: {get_attr: [CephStorage, attributes, nova_server_resource]}
 
@@ -1396,6 +1409,7 @@ resources:
     type: OS::Heat::StructuredDeployments
     depends_on: ControllerAllNodesDeployment
     properties:
+      name: ControllerAllNodesValidationDeployment
       config: {get_resource: AllNodesValidationConfig}
       servers: {get_attr: [Controller, attributes, nova_server_resource]}
 
@@ -1403,6 +1417,7 @@ resources:
     type: OS::Heat::StructuredDeployments
     depends_on: ComputeAllNodesDeployment
     properties:
+      name: ComputeAllNodesValidationDeployment
       config: {get_resource: AllNodesValidationConfig}
       servers: {get_attr: [Compute, attributes, nova_server_resource]}
 
@@ -1410,6 +1425,7 @@ resources:
     type: OS::Heat::StructuredDeployments
     depends_on: BlockStorageAllNodesDeployment
     properties:
+      name: BlockStorageAllNodesValidationDeployment
       config: {get_resource: AllNodesValidationConfig}
       servers: {get_attr: [BlockStorage, attributes, nova_server_resource]}
 
@@ -1417,6 +1433,7 @@ resources:
     type: OS::Heat::StructuredDeployments
     depends_on: ObjectStorageAllNodesDeployment
     properties:
+      name: ObjectStorageAllNodesValidationDeployment
       config: {get_resource: AllNodesValidationConfig}
       servers: {get_attr: [ObjectStorage, attributes, nova_server_resource]}
 
@@ -1424,6 +1441,7 @@ resources:
     type: OS::Heat::StructuredDeployments
     depends_on: CephStorageAllNodesDeployment
     properties:
+      name: CephStorageAllNodesValidationDeployment
       config: {get_resource: AllNodesValidationConfig}
       servers: {get_attr: [CephStorage, attributes, nova_server_resource]}
 
