Fix wrong keypair parameter description
The parameters have nothing to do with EC2 keypairs, they are used to
specify Nova SSH key pairs.

Change-Id: Ia8d37cb5c443812d02133747cb54fcaf0110d091

--- a/puppet/ceph-storage.yaml
+++ b/puppet/ceph-storage.yaml
@@ -16,7 +16,7 @@ parameters:
     description: What policy to use when reconstructing instances. REBUILD for rebuilds, REBUILD_PRESERVE_EPHEMERAL to preserve /mnt.
     type: string
   KeyName:
-    description: Name of an existing EC2 KeyPair to enable SSH access to the instances
+    description: Name of an existing Nova key pair to enable SSH access to the instances
     type: string
     default: default
     constraints:
