--- a/puppet/cinder-storage.yaml
+++ b/puppet/cinder-storage.yaml
@@ -46,7 +46,7 @@ parameters:
       - custom_constraint: nova.flavor
   KeyName:
     default: default
-    description: Name of an existing EC2 KeyPair to enable SSH access to the instances
+    description: Name of an existing Nova key pair to enable SSH access to the instances
     type: string
   RabbitPassword:
     default: 'guest'
