--- a/puppet/swift-storage.yaml
+++ b/puppet/swift-storage.yaml
@@ -17,7 +17,7 @@ parameters:
     type: string
   KeyName:
     default: default
-    description: Name of an existing EC2 KeyPair to enable SSH access to the instances
+    description: Name of an existing Nova key pair to enable SSH access to the instances
     type: string
   MountCheck:
     default: 'false'
