--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -246,7 +246,7 @@ parameters:
     type: string
   KeyName:
     default: default
-    description: Name of an existing EC2 KeyPair to enable SSH access to the instances
+    description: Name of an existing Nova key pair to enable SSH access to the instances
     type: string
     constraints:
       - custom_constraint: nova.keypair
