Remove not needed completion-signal
The completion-signal input is no longer needed, because for some
time 99-refresh-completed has supported using per-deployment
signal URLs instead provided the config group is set correctly
to os-apply-config.

Change-Id: I76cb5331917ff54e978bd22b9dea0c1a2c65a928

--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -67,8 +67,8 @@ resources:
   allNodesConfigImpl:
     type: OS::Heat::StructuredConfig
     properties:
+      group: os-apply-config
       config:
-        completion-signal: {get_input: deploy_signal_id}
         hosts:
           list_join:
           - "\n"
