Align template defaults with the client
This aligns the parameter default values from python-tripleoclient
with tripleo-heat-templates. This is in preparation for removing
all the defaults from the client, and maintaining them only in the
templates.

Change-Id: I7b635a250f1ecc170e18d8e434f0118c6fcbb942
Co-Authored-By: James Slagle <jslagle@redhat.com>
(cherry picked from commit 4ff84638ab1fd39b6c907ed2899227462da358cf)

--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -103,7 +103,7 @@ parameters:
     description: The tenant network type for Neutron, either gre or vxlan.
     default: 'vxlan'
   NeutronNetworkVLANRanges:
-    default: 'datacentre'
+    default: 'datacentre:1:1000'
     description: >
       The Neutron ML2 and OpenVSwitch vlan mapping range to support. See the
       Neutron documentation for permitted values. Defaults to permitting any
@@ -202,7 +202,7 @@ parameters:
     type: json
   NovaComputeLibvirtType:
     type: string
-    default: ''
+    default: kvm
   NovaComputeLibvirtVifDriver:
     default: ''
     description: Libvirt VIF driver configuration for the network
