--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -77,7 +77,7 @@ parameters:
                  set via parameter_defaults in the resource registry.
     type: json
   CloudName:
-    default: ''
+    default: overcloud
     description: The DNS name of this cloud. E.g. ci-overcloud.tripleo.org
     type: string
   ControllerExtraConfig:
@@ -403,7 +403,7 @@ parameters:
     description: The tenant network type for Neutron, either gre or vxlan.
     type: string
   NeutronNetworkVLANRanges:
-    default: 'datacentre'
+    default: 'datacentre:1:1000'
     description: >
       The Neutron ML2 and OpenVSwitch vlan mapping range to support. See the
       Neutron documentation for permitted values. Defaults to permitting any
