--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -1540,7 +1540,7 @@ outputs:
     value: {get_attr: [VipMap, net_ip_map, {get_param: [ServiceNetMap, SwiftProxyNetwork]}]}
   HostsEntry:
     description: |
-      The content that should be appended to your /etc/hosts if you want do get
+      The content that should be appended to your /etc/hosts if you want to get
       hostname-based access to the deployed nodes (useful for testing without
       setting up a DNS).
     value: {get_attr: [allNodesConfig, hosts_entries]}
