Rename validate tox env to linters
This is the new blessed naming scheme for lint-type jobs such as
pep8 or the yaml validation job we have in this project.  Doing
this rename will allow us to use standard infra job templates
to run validation on proposed changes.

Change-Id: I0a4c4372429a08e0babb4d323f2b027f1d95f3d7

--- a/tox.ini
+++ b/tox.ini
@@ -10,5 +10,5 @@ deps = -r{toxinidir}/requirements.txt
 [testenv:venv]
 commands = {posargs}
 
-[testenv:validate]
+[testenv:linters]
 commands = python ./tools/yaml-validate.py .
