--- a/capabilities-map.yaml
+++ b/capabilities-map.yaml
@@ -66,7 +66,7 @@ topics:
         description: >
           Docker container with heat agents for containerized compute node
         environments:
-          - file: environments/docker-rdo.yaml
+          - file: environments/docker.yaml
             title: Docker RDO
             description:
             requires:
