--- a/puppet/hieradata/common.yaml
+++ b/puppet/hieradata/common.yaml
@@ -9,6 +9,8 @@ ceilometer::agent::auth::auth_tenant_name: 'admin'
 
 nova::network::neutron::neutron_admin_tenant_name: 'service'
 nova::network::neutron::neutron_admin_username: 'neutron'
+nova::network::neutron::vif_plugging_is_fatal: false
+nova::network::neutron::vif_plugging_timeout: 30
 nova::network::neutron::dhcp_domain: ''
 
 neutron::allow_overlapping_ips: true
