Enable the ML2 port security extension driver by default
This patch enables the port security ML2 extension driver by default. It
should have no impact on users that do not explicitly modify the port
security property on a port.

Change-Id: I1413428a1c0329acf0276bf6032684e5e7f8e177
Closes-Bug: #1531970
(cherry picked from commit d9fa3428fd4a794bddff68960c8748642017f7e4)

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -228,7 +228,7 @@ parameters:
         The mechanism drivers for the Neutron tenant network.
     type: comma_delimited_list
   NeutronPluginExtensions:
-    default: "qos"
+    default: "qos,port_security"
     description: |
         Comma-separated list of extensions enabled for the Neutron plugin.
     type: comma_delimited_list
