--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -512,7 +512,7 @@ parameters:
     default: ["1:1000", ]
     type: comma_delimited_list
   NeutronPluginExtensions:
-    default: "qos"
+    default: "qos,port_security"
     description: |
         Comma-separated list of extensions enabled for the Neutron plugin.
     type: comma_delimited_list
