--- a/capabilities-map.yaml
+++ b/capabilities-map.yaml
@@ -5,7 +5,7 @@
 # root_template: identifies repository's root template
 # root_environment: identifies root_environment, this one is special in terms of
 #   order in which the environments are merged before deploying. This one serves as
-#   a base and it's parameters/resource_registry gets overriden by other environments
+#   a base and it's parameters/resource_registry gets overridden by other environments
 #   if used.
 
 # topics:
@@ -21,7 +21,7 @@
 # Attributes:
 #  title: (optional)
 #  description: (optional)
-#  tags: a list of tags to provide aditional information for e.g. filtering (optional)
+#  tags: a list of tags to provide additional information for e.g. filtering (optional)
 #  environments: (required)
 
 # environments:
