--- a/network/management.yaml
+++ b/network/management.yaml
@@ -16,7 +16,7 @@ parameters:
     type: string
   ManagementNetAdminStateUp:
     default: false
-    description: This admin state of of the network.
+    description: The admin state of the network.
     type: boolean
   ManagementNetEnableDHCP:
     default: false
