--- a/network/ports/from_service.yaml
+++ b/network/ports/from_service.yaml
@@ -8,19 +8,19 @@ parameters:
     description: Name of the service to lookup
     default: ''
     type: string
-  NetworkName: # Here for compatability with ctlplane_vip.yaml
+  NetworkName: # Here for compatibility with ctlplane_vip.yaml
     description: Name of the network where the VIP will be created
     default: ctlplane
     type: string
-  PortName: # Here for compatability with ctlplane_vip.yaml
+  PortName: # Here for compatibility with ctlplane_vip.yaml
     description: Name of the port
     default: ''
     type: string
-  ControlPlaneIP: # Here for compatability with ctlplane_vip.yaml
+  ControlPlaneIP: # Here for compatibility with ctlplane_vip.yaml
     description: IP address on the control plane
     default: ''
     type: string
-  ControlPlaneNetwork: # Here for compatability with ctlplane_vip.yaml
+  ControlPlaneNetwork: # Here for compatibility with ctlplane_vip.yaml
     description: The name of the undercloud Neutron control plane
     default: ctlplane
     type: string
