--- a/network/ports/storage_from_pool.yaml
+++ b/network/ports/storage_from_pool.yaml
@@ -12,7 +12,7 @@ parameters:
     description: Name of the port
     default: ''
     type: string
-  ControlPlaneIP: # Here for compatability with noop.yaml
+  ControlPlaneIP: # Here for compatibility with noop.yaml
     description: IP address on the control plane
     default: ''
     type: string
