--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -909,7 +909,7 @@ resources:
         cinder_dsn:
           list_join:
             - ''
-            - - 'mysql://cinder:'
+            - - 'mysql+pymysql://cinder:'
               - {get_param: CinderPassword}
               - '@'
               - {get_param: MysqlVirtualIP}
@@ -926,7 +926,7 @@ resources:
         glance_dsn:
           list_join:
             - ''
-            - - 'mysql://glance:'
+            - - 'mysql+pymysql://glance:'
               - {get_param: GlancePassword}
               - '@'
               - {get_param: MysqlVirtualIP}
@@ -936,7 +936,7 @@ resources:
         heat_dsn:
           list_join:
             - ''
-            - - 'mysql://heat:'
+            - - 'mysql+pymysql://heat:'
               - {get_param: HeatPassword}
               - '@'
               - {get_param: MysqlVirtualIP}
@@ -952,7 +952,7 @@ resources:
         keystone_dsn:
           list_join:
             - ''
-            - - 'mysql://keystone:'
+            - - 'mysql+pymysql://keystone:'
               - {get_param: AdminToken}
               - '@'
               - {get_param: MysqlVirtualIP}
@@ -1058,7 +1058,7 @@ resources:
         neutron_dsn:
           list_join:
             - ''
-            - - 'mysql://neutron:'
+            - - 'mysql+pymysql://neutron:'
               - {get_param: NeutronPassword}
               - '@'
               - {get_param: MysqlVirtualIP}
@@ -1080,7 +1080,7 @@ resources:
         ceilometer_dsn:
           list_join:
             - ''
-            - - 'mysql://ceilometer:'
+            - - 'mysql+pymysql://ceilometer:'
               - {get_param: CeilometerPassword}
               - '@'
               - {get_param: MysqlVirtualIP}
@@ -1092,7 +1092,7 @@ resources:
         nova_dsn:
           list_join:
             - ''
-            - - 'mysql://nova:'
+            - - 'mysql+pymysql://nova:'
               - {get_param: NovaPassword}
               - '@'
               - {get_param: MysqlVirtualIP}
