Minor fixes to allow local docker registry usage
Changed the heat-docker-agents namespace to use the namespacing
specified in the environment file, which reduces modifications required
on the user when using a local registry.

Changed the start agents script to handle using a local registry both
with a namespace and without.

Change-Id: I16cc96b7ecddeeda07de45f50ffc6a880dabbba6

--- a/docker/firstboot/install_docker_agents.yaml
+++ b/docker/firstboot/install_docker_agents.yaml
@@ -3,7 +3,7 @@ heat_template_version: 2014-10-16
 parameters:
   DockerAgentImage:
     type: string
-    default: tripleoupstream/heat-docker-agents
+    default: heat-docker-agents
   DockerNamespace:
     type: string
     default: kollaglue
@@ -26,7 +26,10 @@ resources:
       config:
         str_replace:
           params:
-            $agent_image: {get_param: DockerAgentImage}
+            $agent_image:
+              list_join:
+              - '/'
+              - [ {get_param: DockerNamespace}, {get_param: DockerAgentImage} ]
             $docker_registry: {get_param: DockerNamespace}
             $docker_namespace_is_registry: {get_param: DockerNamespaceIsRegistry}
           template: {get_file: ./start_docker_agents.sh}
