--- a/environments/docker.yaml
+++ b/environments/docker.yaml
@@ -8,7 +8,7 @@ parameters:
 
 parameter_defaults:
   # Defaults to 'tripleoupstream'.  Specify a local docker registry
-  # Example: 192.168.122.131:8787
+  # Example: 192.0.2.1:8787/tripleoupstream
   DockerNamespace: tripleoupstream
   # Enable local Docker registry
   DockerNamespaceIsRegistry: false
