Add network ExtraConfig hook
Adds a post-network hook to execute some tasks before nodes deployment.

This hook is execute one time (not for each node) during network step.
It can be useful to execute scripts or templates before creating nodes.

For example, we can use this hook for :
- Deploy stuff used during the deployment of nodes.
- Deploying network, backup, monitoring infrastructure.

Change-Id: I3e999d73b55c5c27f70f722ec63ec8f2150bb5aa

--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -63,6 +63,8 @@ resource_registry:
   OS::TripleO::Network::Tenant: network/noop.yaml
   OS::TripleO::Network::Management: network/noop.yaml
 
+  OS::TripleO::Network::ExtraConfig: network/extraconfig.yaml
+
   OS::TripleO::Network::Ports::NetVipMap: network/ports/net_ip_map.yaml
   OS::TripleO::Network::Ports::NetIpMap: network/ports/net_ip_map.yaml
   OS::TripleO::Network::Ports::NetIpSubnetMap: network/ports/net_ip_subnet_map.yaml
