--- a/network/ports/management.yaml
+++ b/network/ports/management.yaml
@@ -1,4 +1,4 @@
-heat_template_version: 2015-04-30
+heat_template_version: 2015-10-15
 
 description: >
   Creates a port on the management network. The IP address will be chosen
@@ -31,12 +31,10 @@ outputs:
     description: management network IP
     value: {get_attr: [ManagementPort, fixed_ips, 0, ip_address]}
   ip_subnet:
-    # FIXME: this assumes a 2 digit subnet CIDR (need more heat functions?)
     description: IP/Subnet CIDR for the management network IP
     value:
           list_join:
             - ''
             - - {get_attr: [ManagementPort, fixed_ips, 0, ip_address]}
               - '/'
-              - {get_attr: [ManagementPort, subnets, 0, cidr, -2]}
-              - {get_attr: [ManagementPort, subnets, 0, cidr, -1]}
+              - {str_split: ['/', {get_attr: [ManagementPort, subnets, 0, cidr]}, 1]}
