--- a/network/ports/storage.yaml
+++ b/network/ports/storage.yaml
@@ -1,4 +1,4 @@
-heat_template_version: 2015-04-30
+heat_template_version: 2015-10-15
 
 description: >
   Creates a port on the storage network.
@@ -44,12 +44,10 @@ outputs:
     description: storage network IP
     value: {get_attr: [StoragePort, fixed_ips, 0, ip_address]}
   ip_subnet:
-    # FIXME: this assumes a 2 digit subnet CIDR (need more heat functions?)
     description: IP/Subnet CIDR for the storage network IP
     value:
           list_join:
             - ''
             - - {get_attr: [StoragePort, fixed_ips, 0, ip_address]}
               - '/'
-              - {get_attr: [StoragePort, subnets, 0, cidr, -2]}
-              - {get_attr: [StoragePort, subnets, 0, cidr, -1]}
+              - {str_split: ['/', {get_attr: [StoragePort, subnets, 0, cidr]}, 1]}
