--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -72,6 +72,10 @@ parameters:
     default: []
     description: Should be used for arbitrary ips.
     type: json
+  CorosyncIPv6:
+    default: false
+    description: Enable IPv6 in Corosync
+    type: boolean
   Debug:
     default: ''
     description: Set to True to enable debugging on all services.
@@ -892,6 +896,7 @@ resources:
           CloudDomain: {get_param: CloudDomain}
           ControlVirtualInterface: {get_param: ControlVirtualInterface}
           ControllerExtraConfig: {get_param: controllerExtraConfig}
+          CorosyncIPv6: {get_param: CorosyncIPv6}
           Debug: {get_param: Debug}
           EnableFencing: {get_param: EnableFencing}
           ManageFirewall: {get_param: ManageFirewall}
