Revert "Wire Neutron ML2 plugin and OVS agent settings as arrays" Revert "Enable configuration of Neutron QoS"
These commits make launching instances on the deployed overcloud fail.
The QoS commit did not even deploy an overcloud with the current
stable/liberty puppet-neutron without:
https://review.openstack.org/#/c/267081/

So I am not sure how it even passed CI.

This reverts two commits:
82a892f0152faca286119c79404178cb5458ce32
39e8afe898c98815ff4e0292695110647bb44ddc

Change-Id: I480ccf728024fa0a9c790d782a23f51e62948c62

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -109,7 +109,7 @@ parameters:
       to create provider networks (and we use this for the default floating
       network) - if changing this either use different post-install network
       scripts or be sure to keep 'datacentre' as a mapping network name.
-    type: comma_delimited_list
+    type: string
     default: "datacentre:br-ex"
   NeutronControlPlaneID:
     default: 'ctlplane'
@@ -128,15 +128,15 @@ parameters:
         Enable/disable the L2 population feature in the Neutron agents.
     default: "False"
   NeutronFlatNetworks:
-    type: comma_delimited_list
+    type: string
     default: 'datacentre'
     description: >
       If set, flat networks to configure in neutron plugins. Defaults to
       'datacentre' to permit external network creation.
   NeutronNetworkType:
     default: 'vxlan'
-    description: The tenant network type for Neutron.
-    type: comma_delimited_list
+    description: The tenant network type for Neutron, either gre or vxlan.
+    type: string
   NeutronPassword:
     default: unset
     description: The password for the neutron service account, used by neutron agents.
@@ -176,8 +176,9 @@ parameters:
   NeutronTunnelTypes:
     default: 'vxlan'
     description: |
-        The tunnel types for the Neutron tenant network.
-    type: comma_delimited_list
+        The tunnel types for the Neutron tenant network. To specify multiple
+        values, use a comma separated string, like so: 'gre,vxlan'
+    type: string
   NeutronTunnelIdRanges:
     description: |
         Comma-separated list of <tun_min>:<tun_max> tuples enumerating ranges
@@ -197,7 +198,7 @@ parameters:
         from neutron.core_plugins namespace.
     type: string
   NeutronServicePlugins:
-    default: "router,qos"
+    default: "router"
     description: |
         Comma-separated list of service plugin entrypoints to be loaded from the
         neutron.service_plugins namespace.
@@ -210,18 +211,9 @@ parameters:
   NeutronMechanismDrivers:
     default: 'openvswitch'
     description: |
-        The mechanism drivers for the Neutron tenant network.
-    type: comma_delimited_list
-  NeutronPluginExtensions:
-    default: "qos"
-    description: |
-        Comma-separated list of extensions enabled for the Neutron plugin.
-    type: comma_delimited_list
-  NeutronAgentExtensions:
-    default: "qos"
-    description: |
-        Comma-separated list of extensions enabled for the Neutron agents.
-    type: comma_delimited_list
+        The mechanism drivers for the Neutron tenant network. To specify multiple
+        values, use a comma separated string, like so: 'openvswitch,l2_population'
+    type: string
   NeutronAllowL3AgentFailover:
     default: 'False'
     description: Allow automatic l3-agent failover
@@ -895,8 +887,6 @@ resources:
           NeutronServicePlugins: {get_param: NeutronServicePlugins}
           NeutronTypeDrivers: {get_param: NeutronTypeDrivers}
           NeutronMechanismDrivers: {get_param: NeutronMechanismDrivers}
-          NeutronPluginExtensions: {get_param: NeutronPluginExtensions}
-          NeutronAgentExtensions: {get_param: NeutronAgentExtensions}
           NeutronAllowL3AgentFailover: {get_param: NeutronAllowL3AgentFailover}
           NeutronL3HA: {get_param: NeutronL3HA}
           NeutronDhcpAgentsPerNetwork: {get_param: NeutronDhcpAgentsPerNetwork}
@@ -990,7 +980,6 @@ resources:
           NeutronServicePlugins: {get_param: NeutronServicePlugins}
           NeutronTypeDrivers: {get_param: NeutronTypeDrivers}
           NeutronMechanismDrivers: {get_param: NeutronMechanismDrivers}
-          NeutronAgentExtensions: {get_param: NeutronAgentExtensions}
           # L3 HA and Failover is not relevant for Computes, should be removed
           NeutronAllowL3AgentFailover: {get_param: NeutronAllowL3AgentFailover}
           NeutronL3HA: {get_param: NeutronL3HA}
