Don't write CLOUDNAME to the hosts file.
Currently the value of the CloudName param gets written into the
/etc/hosts file on each controller, but it turns out this is an
invalid configuration.  CloudName is supposed to be the DNS name
of the overcloud, and the IP being written is (at least in my case)
the internal API VIP.  This breaks in cases such as SSL because
the services are not listening on an SSL port on the internal API
network, so if a service tries to talk to another service using a
CloudName-defined public endpoint it ends up pointed at a
non-existent internal address:port.

Since by definition CloudName is supposed to be resolvable by the
configured DNS server, we should not need an explicit hosts entry
as well.  Thus, this patch removes that from the file.

Change-Id: I919b42a219d95296f46852dd3266a54d968cf66b

--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -89,10 +89,6 @@ parameters:
     default: 0
     description: Number of workers for Cinder service.
     type: number
-  CloudName:
-    default: overcloud
-    description: The DNS name of this cloud. E.g. ci-overcloud.tripleo.org
-    type: string
   ControllerExtraConfig:
     default: {}
     description: |
@@ -1598,12 +1594,11 @@ outputs:
       Server's IP address and hostname in the /etc/hosts format
     value:
       str_replace:
-        template: IP HOST.DOMAIN HOST CLOUDNAME
+        template: IP HOST.DOMAIN HOST
         params:
           IP: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, ControllerHostnameResolveNetwork]}]}
           DOMAIN: {get_param: CloudDomain}
           HOST: {get_attr: [Controller, name]}
-          CLOUDNAME: {get_param: CloudName}
   nova_server_resource:
     description: Heat resource handle for the Nova compute server
     value:
