Fix MidoNet errors
Some assignments must be fixed in order to make run midonet with HA
pacemaker properly and when the network isolation is enabled.

Change-Id: I69fb3a1911cfe3baea3349da8f3e185dddf60a95
(cherry picked from commit b2593e0722925c733128af41ae0d0b9925d035de)

--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -225,6 +225,15 @@ resources:
                         list_join:
                         - "','"
                         - {get_param: neutron_api_node_ips}
+                # TODO: pass a `midonet_api_node_ips` var
+                midonet_api_node_ips:
+                  str_replace:
+                    template: "['SERVERS_LIST']"
+                    params:
+                      SERVERS_LIST:
+                        list_join:
+                        - "','"
+                        - {get_param: neutron_api_node_ips}
                 keystone_public_api_node_ips:
                   str_replace:
                     template: "['SERVERS_LIST']"
